--- a/html/realisation.html
+++ b/html/realisation.html
@@ -23,7 +23,7 @@
       <nav class="nav">
         <ul class="navigationListe">
           <li class="navigationItem"><a href="https://windsurf.pascaldasse.fr/" class="liens">WORDPRESS</a></li>
-          <li class="navigationItem"><a href="http://stat.apmn7305.odns.fr" class="liens">PHP</a></li>
+          <li class="navigationItem"><a href="https://stat.pascaldasse.fr/" class="liens">PHP</a></li>
           <li class="navigationItem"><a href="fourchette.html" class="liens">css 1</a></li>
           <li class="navigationItem"><a href="ire.html" class="liens">css 2</a></li>
           <li class="navigationItem"><a href="https://note-musique.pascal.compteweb.com" class="liens">JAVASCRIPT</a></li>
